--- a/package.json
+++ b/package.json
@@ -2,11 +2,18 @@
   "name": "artai",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Ahmed Saeed <ahmed.saeeed@outlook.com> (https://github.com/ahmeds26)",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "canvas": "^2.11.0",
+    "express": "^4.18.2",
+    "gifencoder": "^2.0.1",
+    "react": "^18.2.0"
+  }
 }
